--- a/Cajero_Mau/style.css
+++ b/Cajero_Mau/style.css
@@ -147,3 +147,25 @@ top: -5px;
  button:hover{
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  }
+
+ .introBienvenido {
+   text-align: center;
+   padding-top: 10%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   min-height: 100vh;
+   width: 100%;
+   background: url('fondo14.jpg')no-repeat;
+   background-position: center;
+   background-size: cover;
+ }
+
+ .btn {
+   background: transparent;
+    backdrop-filter: blur(15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+ 
